--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: ['12', '13']
+        node-version: ['12', '14']
     steps:
       - uses: actions/checkout@v1
       - name: Setup node
@@ -29,6 +29,8 @@ jobs:
         run: |
           yarn lint &
           yarn test
+      - name: Build
+        run: yarn build
       - name: Release
         id: release
         if: startsWith(github.ref, 'refs/tags/v') && matrix.node-version == '12'
