--- a/package.json
+++ b/package.json
@@ -31,35 +31,35 @@
     "@juggle/resize-observer": "3.2.0"
   },
   "devDependencies": {
-    "@babel/core": "7.11.4",
-    "@babel/plugin-proposal-class-properties": "7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "7.11.0",
-    "@babel/preset-env": "7.11.0",
-    "@babel/preset-react": "7.10.4",
-    "@babel/preset-typescript": "7.10.4",
-    "@jest/globals": "26.4.2",
-    "@testing-library/react-hooks": "3.4.1",
+    "@babel/core": "7.12.3",
+    "@babel/plugin-proposal-class-properties": "7.12.1",
+    "@babel/plugin-proposal-object-rest-spread": "7.12.1",
+    "@babel/preset-env": "7.12.1",
+    "@babel/preset-react": "7.12.1",
+    "@babel/preset-typescript": "7.12.1",
+    "@jest/globals": "26.6.2",
+    "@testing-library/react-hooks": "3.4.2",
     "@types/gtag.js": "0.0.3",
-    "@types/react": "16.9.48",
-    "@types/testing-library__react-hooks": "3.4.0",
-    "@typescript-eslint/eslint-plugin": "3.10.1",
-    "@typescript-eslint/parser": "3.10.1",
+    "@types/react": "16.9.55",
+    "@types/testing-library__react-hooks": "3.4.1",
+    "@typescript-eslint/eslint-plugin": "4.6.1",
+    "@typescript-eslint/parser": "4.6.1",
     "babel-loader": "8.1.0",
-    "eslint": "7.7.0",
-    "eslint-config-typescript-shareable": "0.12.0",
+    "eslint": "7.12.1",
+    "eslint-config-typescript-shareable": "0.20.0",
     "eslint-import-resolver-node": "0.3.4",
-    "eslint-plugin-functional": "3.0.2",
-    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-functional": "3.1.0",
+    "eslint-plugin-import": "2.22.1",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-react": "7.20.6",
-    "eslint-plugin-react-hooks": "4.1.0",
-    "jest": "26.4.2",
-    "prettier": "2.1.1",
-    "react": "16.13.1",
-    "react-test-renderer": "16.13.1",
-    "typescript": "4.0.2",
-    "webpack": "5.0.0-beta.29",
-    "webpack-cli": "3.3.12"
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "jest": "26.6.2",
+    "prettier": "2.1.2",
+    "react": "17.0.1",
+    "react-test-renderer": "17.0.1",
+    "typescript": "4.0.5",
+    "webpack": "5.3.2",
+    "webpack-cli": "4.1.0"
   },
   "peerDependencies": {
     "react": "^16.13.1"
