--- a/package.json
+++ b/package.json
@@ -38,15 +38,15 @@
     "@babel/preset-react": "7.12.10",
     "@babel/preset-typescript": "7.12.7",
     "@jest/globals": "26.6.2",
-    "@testing-library/react-hooks": "4.0.0",
+    "@testing-library/react-hooks": "5.0.0",
     "@types/gtag.js": "0.0.4",
     "@types/react": "17.0.0",
     "@types/testing-library__react-hooks": "3.4.1",
-    "@typescript-eslint/eslint-plugin": "4.13.0",
-    "@typescript-eslint/parser": "4.13.0",
+    "@typescript-eslint/eslint-plugin": "4.14.0",
+    "@typescript-eslint/parser": "4.14.0",
     "babel-loader": "8.2.2",
-    "eslint": "7.17.0",
-    "eslint-config-typescript-shareable": "0.26.0",
+    "eslint": "7.18.0",
+    "eslint-config-typescript-shareable": "0.27.0",
     "eslint-import-resolver-node": "0.3.4",
     "eslint-plugin-functional": "3.2.1",
     "eslint-plugin-import": "2.22.1",
@@ -57,8 +57,9 @@
     "prettier": "2.2.1",
     "react": "17.0.1",
     "react-test-renderer": "17.0.1",
+    "semver": "7.3.4",
     "typescript": "4.1.3",
-    "webpack": "5.13.0",
+    "webpack": "5.15.0",
     "webpack-cli": "4.3.1"
   },
   "peerDependencies": {
