--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,14 +15,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: ['12', '14']
+        node-version: ['14', '16']
     steps:
       - uses: actions/checkout@v1
       - name: Setup node
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-          registry-url: 'https://registry.npmjs.org'
       - name: Install dependencies
         run: yarn --immutable
       - name: Linting & Unit testing
@@ -33,7 +32,7 @@ jobs:
         run: yarn build
       - name: Release
         id: release
-        if: startsWith(github.ref, 'refs/tags/v') && matrix.node-version == '12'
+        if: startsWith(github.ref, 'refs/tags/v')
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # provided by Actions
@@ -43,7 +42,7 @@ jobs:
           draft: false
           prerelease: false
       - name: Deploy NPM package
-        if: startsWith(github.ref, 'refs/tags/v') && matrix.node-version == '12'
+        if: startsWith(github.ref, 'refs/tags/v')
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
         run: |
