--- a/package.json
+++ b/package.json
@@ -30,25 +30,25 @@
     "@juggle/resize-observer": "3.3.1"
   },
   "devDependencies": {
-    "@babel/core": "7.14.8",
+    "@babel/core": "7.15.0",
     "@babel/plugin-proposal-class-properties": "7.14.5",
     "@babel/plugin-proposal-object-rest-spread": "7.14.7",
-    "@babel/preset-env": "7.14.9",
+    "@babel/preset-env": "7.15.0",
     "@babel/preset-react": "7.14.5",
-    "@babel/preset-typescript": "7.14.5",
+    "@babel/preset-typescript": "7.15.0",
     "@jest/globals": "27.0.6",
     "@testing-library/react-hooks": "7.0.1",
     "@types/gtag.js": "0.0.7",
-    "@types/react": "17.0.15",
+    "@types/react": "17.0.16",
     "@types/testing-library__react-hooks": "4.0.0",
-    "@typescript-eslint/eslint-plugin": "4.29.0",
-    "@typescript-eslint/parser": "4.29.0",
+    "@typescript-eslint/eslint-plugin": "4.29.1",
+    "@typescript-eslint/parser": "4.29.1",
     "babel-loader": "8.2.2",
     "eslint": "7.32.0",
     "eslint-config-typescript-shareable": "1.3.0",
-    "eslint-import-resolver-node": "0.3.4",
+    "eslint-import-resolver-node": "0.3.5",
     "eslint-plugin-functional": "3.5.0",
-    "eslint-plugin-import": "2.23.4",
+    "eslint-plugin-import": "2.24.0",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
@@ -58,10 +58,11 @@
     "react-test-renderer": "17.0.2",
     "semver": "7.3.5",
     "typescript": "4.3.5",
-    "webpack": "5.48.0",
+    "webpack": "5.49.0",
     "webpack-cli": "4.7.2"
   },
   "peerDependencies": {
     "react": "^17.0.2"
-  }
+  },
+  "packageManager": "yarn@3.0.0"
 }
