--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "release": "yarn version apply && bash sbin/release.sh"
   },
   "devDependencies": {
-    "@babel/core": "7.17.5",
+    "@babel/core": "7.17.8",
     "@babel/plugin-proposal-class-properties": "7.16.7",
     "@babel/plugin-proposal-object-rest-spread": "7.17.3",
     "@babel/preset-env": "7.16.11",
@@ -36,32 +36,32 @@
     "@jest/globals": "27.5.1",
     "@juggle/resize-observer": "3.3.1",
     "@testing-library/react-hooks": "7.0.2",
-    "@types/gtag.js": "0.0.8",
-    "@types/react": "17.0.39",
+    "@types/gtag.js": "0.0.10",
+    "@types/react": "17.0.43",
     "@types/testing-library__react-hooks": "4.0.0",
-    "@typescript-eslint/eslint-plugin": "5.12.1",
-    "@typescript-eslint/parser": "5.12.1",
-    "babel-loader": "8.2.3",
-    "eslint": "8.9.0",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
+    "babel-loader": "8.2.4",
+    "eslint": "8.12.0",
     "eslint-config-typescript-shareable": "1.7.0",
     "eslint-import-resolver-node": "0.3.6",
     "eslint-plugin-functional": "4.2.0",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-react": "7.28.0",
-    "eslint-plugin-react-hooks": "4.3.0",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.4.0",
     "jest": "27.5.1",
-    "prettier": "2.5.1",
-    "react": "17.0.2",
-    "react-test-renderer": "17.0.2",
+    "prettier": "2.6.2",
+    "react": "18.0.0",
+    "react-test-renderer": "18.0.0",
     "semver": "7.3.5",
-    "typescript": "4.5.5",
-    "webpack": "5.69.1",
+    "typescript": "4.6.3",
+    "webpack": "5.71.0",
     "webpack-cli": "4.9.2"
   },
   "peerDependencies": {
     "@juggle/resize-observer": "^3.3.1",
-    "react": "^17.0.2"
+    "react": "^17.0.2 || ^18.0.0"
   },
   "packageManager": "yarn@3.2.0"
 }
