--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.5.0",
     "jest": "28.0.3",
+    "jest-environment-jsdom": "28.0.2",
     "prettier": "2.6.2",
     "react": "18.1.0",
     "react-test-renderer": "18.1.0",
